# aws-report

./: LICENSE  README.md  aws-report.cabal  stack.yaml
src/: Main.hs
