name:                aws-report
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/jml/aws-report#readme
license:             BSD3
license-file:        LICENSE
author:              Jonathan M. Lange
maintainer:          jml@mumak.net
copyright:           Copyright (c) Jonathan M. Lange
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable aws-report
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
