name:                aws-report
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/jml/aws-report#readme
license:             Apache-2.0
license-file:        LICENSE
author:              Jonathan M. Lange
maintainer:          jml@mumak.net
copyright:           Copyright (c) ClusterHQ Ltd.
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable aws-report
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , turtle
                     , basic-prelude
                     , aeson
                     , containers
                     , foldl
  default-extensions:  NoImplicitPrelude
                     , OverloadedStrings
